--- a/resume/index.html
+++ b/resume/index.html
@@ -72,12 +72,12 @@
     <div class="row">
       <div class="col-sm-4 col-lg-4">
       
-        <img src="https://images.pexels.com/photos/4588001/pexels-photo-4588001.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="avatar" height="250px" width="250px" class="image_change"></img>
+        <img src="https://images.pexels.com/photos/2214495/pexels-photo-2214495.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="avatar" height="250px" width="250px" class="image_change"></img>
       </div>
       <div class="col-sm-8 col-lg-8">
-          <h2 style="color: black"><b><u>Anubhav Sanket</u></b></h2>
-          <h5><b>Wannabe ML Engineer xD</b></h5>
-          <h6><i>Pronouns: Dukh/Dard/Kasht/Peeda</i></h6>
+          <h2 style="color: black"><b><u>H Vaishnavi</u></b></h2>
+          <h5><b>AI - ML Engineer xD</b></h5>
+         
         </div>
     </div>
 </div>
