--- a/resume/index.html
+++ b/resume/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Henlo World</a>
+        <a class="navbar-brand" href="#">Myself</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -76,7 +76,7 @@
       </div>
       <div class="col-sm-8 col-lg-8">
           <h2 style="color: black"><b><u>H Vaishnavi</u></b></h2>
-          <h5><b>AI - ML Engineer xD</b></h5>
+          <h5><b>AI - ML Engineer </b></h5>
          
         </div>
     </div>
